--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
 
-    <title>Index Page</title>
+    <title>Form Maker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,15 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="views/main/main.controller.js"></script>
+    <script src="views/sidebar/sidebar.controller.js"></script>
+    <script src="views/main/main.controller.js"></script>
+    <script src="views/users/login.controller.js"></script>
+    <script src="views/users/profile.controller.js"></script>
+    <script src="views/users/register.controller.js"></script>
+<!--    <script src="views/forms/fields.controller.js"></script>
+    <script src="views/forms/forms.controller.js"></script>  -->
+    <script src="services/user.service.client.js"></script>
+    <script src="services/forms.service.client.js"></script>
 
 
     <!-- Custom styles for this template -->
@@ -32,15 +41,14 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div ng-include="'views/sidebar/sidebar.view.html'">
-        </div>
-        <div ng-view>
+
+        <div class="col-sm-3 col-md-2 sidebar" ng-include="'views/sidebar/sidebar.view.html'">
         </div>
 
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
         </div>
     </div>
 </div>
-
 
 
 
