--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="https://drive.google.com/file/d/0B5Px7SrDiPnGN2N6MGdqUVRMb2M/view?usp=sharing">PROJECT PROPOSAL</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/assignment/home.html">ASSIGNMENTS</a>
+                        <a class="page-scroll" href="/assignment/index.html">ASSIGNMENTS</a>
                     </li>
                    <!-- <li>
                         <a class="page-scroll" href="#about">About</a>
