--- a/public/index1.html
+++ b/public/index1.html
@@ -16,7 +16,7 @@ Home Page
 <a href="project/index.html">Project Main Page</a>
 <br>
 <br>
-<a href="experiment/index.html">Experiments Main Page ...</a>
+<a href="experiment/index1.html">Experiments Main Page ...</a>
 <br>
 <br>
 <a href="/hello">Hello</a>
