search and detail functionality

--- a/public/swayam/index.html
+++ b/public/swayam/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="MusicApp">
+<html lang="en" ng-app="EventBuilderApp">
 
 <head>
 
@@ -24,11 +24,13 @@
     <script src="views/users/register.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
+    <script src="views/createEvent/createEvent.controller.js"></script>
     <script src="views/details/details.controller.js"></script>
     <script src="views/search/search.controller.js"></script>
+    <script src="views/users/myEvents.controller.js"></script>
     <script src="views/admin/admin.controller.js"></script>
     <script src="services/user.service.client.js"></script>
-
+    <script src="services/userEvent.service.js"></script>
 
 </head>
 
