CRUD in myplaylist

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -26,8 +26,10 @@
     <script src="views/users/login.controller.js"></script>
     <script src="views/details/details.controller.js"></script>
     <script src="views/search/search.controller.js"></script>
+    <script src="views/users/myPlaylists.controller.js"></script>
     <script src="views/admin/admin.controller.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="services/userPlaylist.service.js"></script>
 
 
 </head>
