--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>MyMusic</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,6 +60,10 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="/assignment/index.html">ASSIGNMENTS</a>
+                    </li>
+
+                    <li>
+                        <a class="page-scroll" href="/project/index.html">PROJECT</a>
                     </li>
                    <!-- <li>
                         <a class="page-scroll" href="#about">About</a>
