link to project

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a class="page-scroll" href="/project/index.html">PROJECT</a>
+                        <a class="page-scroll" href="/project/">PROJECT</a>
                     </li>
                    <!-- <li>
                         <a class="page-scroll" href="#about">About</a>
