--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>MyMusic</title>
+    <title>MyWebsite</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="https://drive.google.com/file/d/0B5Px7SrDiPnGN2N6MGdqUVRMb2M/view?usp=sharing">PROJECT PROPOSAL</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/assignment/index.html">ASSIGNMENTS</a>
+                        <a class="page-scroll" href="/assignment/client/index.html">ASSIGNMENTS</a>
                     </li>
 
                     <li>
