--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -11,7 +11,7 @@
 
     <title>Form Maker</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS ...-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../css/dashboard.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
