--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -1,16 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" ng-app="MusicApp">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="../client/views/assets/paper_img/favicon.ico">
+    <!--<link rel="icon" type="image/png" href="../client/views/assets/paper_img/favicon.ico">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>My Music Portal</title>
 
+    <link rel="shortcut icon" href="/Users/janhavi/WebstormProjects/webdev2016/public/project/client/views/assets/paper_img/logo.png">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
+
+
+
     <link href="../client/CSS/bootstrap3/css/bootstrap.css" rel="stylesheet" />
+    <link href="../client/CSS/dashboard.css" rel="stylesheet">
     <link href="../client/views/assets/css/ct-paper.css" rel="stylesheet"/>
     <link href="../client/views/assets/css/demo.css" rel="stylesheet" />
     <link href="../client/views/assets/css/examples.css" rel="stylesheet" />
@@ -53,11 +58,22 @@
 
 </head>
 <body ng-controller="MainController">
-<div ng-controller="HeaderController" ng-include src="'views/header/header.view.html'">
+<!--<div ng-controller="HeaderController" ng-include src="'views/header/header.view.html'">-->
+    <div ng-include="'views/header/header.view.html'">
+    </div>
 
-</div>
+<div class="container-fluid">
+    <div class="row">
 
-<div ng-view>
+        <!-- <div class="col-sm-3 col-md-2 sidebar" ng-include="'views/sidebar/sidebar.view.html'">
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
+        </div> -->
+        <div ng-view>
+        </div>
+
+
+    </div>
 
 
 </div>
