--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="MusicApp">
+
 <head>
-    <meta charset="utf-8" />
-    <!--<link rel="icon" type="image/png" href="../client/views/assets/paper_img/favicon.ico">-->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>My Music Portal</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <link rel="shortcut icon" href="/Users/janhavi/WebstormProjects/webdev2016/public/project/client/views/assets/paper_img/logo.png">
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+    <title>Assignment Index Page</title>
 
+    <!-- Bootstrap Core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/dashboard.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular-route.js"></script>
 
-
-
-    <link href="../client/CSS/bootstrap3/css/bootstrap.css" rel="stylesheet" />
-    <link href="../client/CSS/dashboard.css" rel="stylesheet">
-    <link href="../client/views/assets/css/ct-paper.css" rel="stylesheet"/>
-    <link href="../client/views/assets/css/demo.css" rel="stylesheet" />
-    <link href="../client/views/assets/css/examples.css" rel="stylesheet" />
-
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-
-    <!-- Angular JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="views/header/header.controller.js"></script>
@@ -45,61 +34,26 @@
     <script src="services/song.service.client.js"></script>
 
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-    <!--<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>-->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular-sanitize.js"></script>
-
-
-    <!-- collapse-->
-    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>-->
-    <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>-->
-    <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>-->
-
-
 </head>
+
 <body ng-controller="MainController">
-<!--<div ng-controller="HeaderController" ng-include src="'views/header/header.view.html'">-->
-    <div ng-include="'views/header/header.view.html'">
-    </div>
+<div ng-include="'views/header/header.view.html'">
+</div>
 
 <div class="container-fluid">
     <div class="row">
 
-        <!-- <div class="col-sm-3 col-md-2 sidebar" ng-include="'views/sidebar/sidebar.view.html'">
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
-        </div> -->
-        <div ng-view>
-        </div>
+       <!-- <div class="col-sm-3 col-md-2 sidebar" ng-include="'views/sidebar/sidebar.view.html'">
+        </div>-->
 
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
+        </div>
 
     </div>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </div>
-
 </body>
-
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-<!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
-<!--<script src="CSS/bootstrap3/js/bootstrap.min.js"></script>-->
-<!--<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>-->
-
-<script src="../client/views/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-<script src="../client/views/assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-
-<script src="../client/CSS/bootstrap3/js/bootstrap.js" type="text/javascript"></script>
-
-
-<!--&lt;!&ndash;  Plugins &ndash;&gt;-->
-<script src="../client/views/assets/js/ct-paper-checkbox.js"></script>
-<script src="../client/views/assets/js/ct-paper-radio.js"></script>
-<script src="../client/views/assets/js/bootstrap-select.js"></script>
-<script src="../client/views/assets/js/bootstrap-datepicker.js"></script>
-<!--&lt;!&ndash;<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>&ndash;&gt;-->
-
-<script src="../client/views/assets/js/ct-paper.js"></script>
 
 </html>
