--- a/public/index.html
+++ b/public/index.html
@@ -132,11 +132,14 @@
 
                     </div>
                     <div class="row intro-text">
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <p class="large text-muted center"> Add summary here !</p>
-                        </div>
+                        <!--<div class="col-lg-8 col-lg-offset-2 text-center">
+                            <p class="large text-muted center">I enjoy coding in Java. Passionate about dance and painting. </p>
+                        </div>-->
                         <a href="#services" class="page-scroll btn btn-xl">Professional Experience</a>
                     </div>
+                </div>
+
+
                 </div>
 
             </div>
