--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -16,8 +16,8 @@
 
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link href="../css/dashboard.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/sass-compiled.css" />
-    <script src="libs/modernizr.js" type="text/javascript"></script>
+    <!--<link rel="stylesheet" href="css/sass-compiled.css" />-->
+    <!--<script src="libs/modernizr.js" type="text/javascript"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular-route.js"></script>
 
